cfnTemplate.yaml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Cloudformation template to create a Simple Jenkins Server'

Parameters:

  InstType:
   Type: String
   Default: t2.micro

  keyName:
    Type: String

  amiId:
   Type: String
   Default: 'ami-00ddb0e5626798373'

Resources:
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH Communication and port 8080 to the Jenkins host
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 8080
        ToPort: 8080
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0

  JenkinsInstance:
    Type: AWS::EC2::Instance
    DependsOn: SecurityGroup
    Properties:
      ImageId: !Ref amiId
      InstanceType: !Ref InstType
      KeyName: !Ref keyName
      SecurityGroupIds: 
        - !GetAtt SecurityGroup.GroupId
      Tags: 
      - Key: "Name"
        Value: "JenkinsServer"
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          sudo apt update
          sudo apt install openjdk-8-jdk -y 
          wget -q -O - https://pkg.jenkins.io/debian-stable/jenkins.io.key | sudo apt-key add -
          sudo sh -c 'echo deb https://pkg.jenkins.io/debian-stable binary/ > \
              /etc/apt/sources.list.d/jenkins.list'
          sudo apt-get update
          sudo apt-get install jenkins -y 
          
          # Install Docker
          sudo apt-get install docker.io -y
          sudo systemctl start docker
          
          # Install Maven
          sudo apt-get install maven -y

          # To get the Jenkins initialAdminPassword
          sudo cp /var/lib/jenkins/secrets/initialAdminPassword /home/ubuntu/
          sudo chmod 777 /home/ubuntu/initialAdminPassword

Outputs:
  JenkinsServerURL:
    Description: URL of Jenkins Server
    Value: !Sub
      - http://${publicip}:8080/
      - { publicip: !GetAtt JenkinsInstance.PublicIp } 

  Command:
    Description: Command to get Jenkins Initial Password for Mac Users
    Value: !Sub
      - scp -i ${kName}.pem ubuntu@${publicip}:/home/ubuntu/initialAdminPassword .
      -  kName: !Ref keyName  
         publicip: !GetAtt JenkinsInstance.PublicIp
